V 1.1 fix some bugs

--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Week9_playtest.loader.js";
+      var loaderUrl = buildUrl + "/Week9_second try.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Week9_playtest.data",
-        frameworkUrl: buildUrl + "/Week9_playtest.framework.js",
-        codeUrl: buildUrl + "/Week9_playtest.wasm",
+        dataUrl: buildUrl + "/Week9_second try.data",
+        frameworkUrl: buildUrl + "/Week9_second try.framework.js",
+        codeUrl: buildUrl + "/Week9_second try.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "MPDG-TTP",
